exports[`Header Snapshots renders centered header 1`] = `
<h3
  className="ui header centered"
  style={undefined}>
  My Header
</h3>
`;

exports[`Header Snapshots renders dividing header 1`] = `
<h3
  className="ui header dividing"
  style={undefined}>
  My Header
</h3>
`;

exports[`Header Snapshots renders header of different type 1`] = `
<h2
  className="ui header"
  style={undefined}>
  My Header
</h2>
`;

exports[`Header Snapshots renders header with an icon 1`] = `
<h3
  className="ui header icon"
  style={undefined}>
  My Header
</h3>
`;
